@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2003 - 2014 GraphicsMagick Group
+% Copyright (C) 2003 - 2015 GraphicsMagick Group
 % Copyright (C) 2002 ImageMagick Studio
 %
 % This program is covered by multiple licenses, which are described in
@@ -17257,7 +17257,15 @@ static MagickBool GMCommandSingle(int argc,char **argv)
         /*
           Set command name to alternate name.
         */
-        argv[0]=command;
+        /*
+          FIXME: Does not work to pass address from stack.  Perhaps
+          strdup() might work, but that would create a memory leak.
+          Another way is to somehow assure that argv[0] has sufficient
+          memory allocation space that it can be overwritten but if
+          argv comes from main(), that is impossible to assure.
+          Requires research to find the correct solution.
+         */
+        /* argv[0]=command; */
       }
     else
       {
